cropper modal fix

--- a/src/main/webapp/resources/css/gup-custom-modal-window.css
+++ b/src/main/webapp/resources/css/gup-custom-modal-window.css
@@ -1,30 +1,41 @@
 .cropper-modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    opacity: 1;
-    padding-top: 35px; /* Location of the box */
+    display: none;
+    position: fixed;
+    z-index: 20;
+    padding-top: 100px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .cropper-modal-content {
     position: relative;
-    background-color: #fefefe;
+    background-color: #1269a7;
     margin: auto;
     padding: 0;
     border: 1px solid #888;
-    width: 65%;
+    border-radius: 8px;
+    overflow: hidden;
+    width: 528px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
     animation-duration: 0.4s
+}
+
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
 }
 
 .cropper-close {
@@ -77,4 +88,33 @@
 .cropper-modal-body {
     margin: 16px;
     height: 450px;
+}
+
+.cropper-modal-content > input {
+    color: #3d5da1;
+    font: 400 19px Calibri;
+    line-height: 33px;
+    padding: 0 21px;
+    height: 33px;
+    width: 240px;
+    border: 2px solid #3d5da1;
+    background-color: #d2d3d7;
+    border-radius: 7px;
+    margin: 10px;
+}
+
+.cropper-modal-content > .cropper-modal-footer > button {
+    color: #fff;
+    font: 400 19px ArianAMU;
+    background-color: #9c6;
+    border: 1px solid #9c6;
+    border-radius: 5px;
+    display: block;
+    -webkit-transition: all .25s;
+    transition: all .25s;
+}
+
+.cropper-modal-content > .cropper-modal-footer > button:hover {
+    background-color: transparent;
+    color: #9c6;
 }
